--- a/views/render_layout.erb
+++ b/views/render_layout.erb
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href="/styles.css" type="text/css" rel="stylesheet" />
     <link href="/prettify.css" type="text/css" rel="stylesheet" />
     <script type="text/javascript" src="/prettify.js"></script>
   </head>
