be a little more formal

--- a/views/paste.erb
+++ b/views/paste.erb
@@ -1,4 +1,4 @@
-<h3>Paste somethin yo!</h3>
+<h3>Paste your text!</h3>
 
 <form action="/pasteit" method ="post" accept-charset="utf-8">
   <textarea id="content" name="content" value="" rows="40" cols="60"></textarea>
